Login form and login field had the same id. Changed it so login form has a unique id

--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -9,7 +9,7 @@
 <script>
 $(document).ready(function() {
     $.validate({
-        form : '#login',
+        form : '#login-form',
         errorMessageClass : 'danger'
     });
 });
@@ -30,7 +30,7 @@ $(document).ready(function() {
     <div class="row">
     </div>
     {% from "helpers/forms.html" import render_field, render_boolean %}
-    <form id="login" name="login" action="" method="post">
+    <form id="login-form" name="login-form" action="" method="post">
         {{ form.hidden_tag() }}
         <div class="row">
             <fieldset>
