Updated the Styleguide

--- a/app/templates/styleguide/grid_system.html
+++ b/app/templates/styleguide/grid_system.html
@@ -34,7 +34,7 @@
         <div class="nine columns">
             
             <h2>Grid System</h2>
-            <p>The grid system is borrowed directly from Skeleton. It is a fluid 12-column grid with a max width of 960px. It is completely responsive.</p>
+            <p>The grid system is partially borrowed from Skeleton. It is a 12-column 960px or full-width grid. It is completely responsive.</p>
             <hr>
 
             <h3 class="scrollspy-section"><a id="basic-grid"></a>Basic Grid</h3>
@@ -115,11 +115,26 @@
             <pre class="u-full-width">
 &lt;div class="container"&gt;
 
-&lt;div class="row"&gt;
-    &lt;div class="three columns"&gt;Three&lt;/div&gt;
-    &lt;div class="four columns"&gt;Four&lt;/div&gt;
-    &lt;div class="five columns"&gt;Five&lt;/div&gt;
-&lt;/div&gt;
+    &lt;div class="row"&gt;
+        &lt;div class="three columns"&gt;Three&lt;/div&gt;
+        &lt;div class="four columns"&gt;Four&lt;/div&gt;
+        &lt;div class="five columns"&gt;Five&lt;/div&gt;
+    &lt;/div&gt;
+
+&lt;/div&gt;</pre>
+            <hr>
+
+            <h3 class="scrollspy-section"><a id="full-width-container"></a>Full-Width Container</h3>
+            <p>A full-width container is also available. It takes up the whole viewport width and is divided into 12 columns, just like the standard 960px container.</p>
+            <p>Use the <code>&lt;div class="full-width-container"&gt;</code> instead of the standard Skeleton <code>&lt;div class="container"&gt;</code> to make use of this feature.</p>
+            <pre class="u-full-width">
+&lt;div class="full-width-container"&gt;
+
+    &lt;div class="row"&gt;
+        &lt;div class="three columns"&gt;Three&lt;/div&gt;
+        &lt;div class="four columns"&gt;Four&lt;/div&gt;
+        &lt;div class="five columns"&gt;Five&lt;/div&gt;
+    &lt;/div&gt;
 
 &lt;/div&gt;</pre>
             <hr>
