--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -148,8 +148,8 @@
                     <ul>
                         <li><a href="/terms_of_service">{{_('Terms of Service') }}</a></li>
                         <li><a href="{{ url_for('contact') }}">{{ _('Contact') }}</a></li>
-                        <!--<li><a href="/about">{{ _('About Us') }}</a></li>-->
-                        <!--<li><a href="/how_it_works">{{ _('How it works') }}</a></li>-->
+                        <li><a href="/about">{{ _('About Us') }}</a></li>
+                        <li><a href="/how_it_works">{{ _('How it works') }}</a></li>
                     </ul>
                 </div>
                 {% if debug %}
