--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -146,7 +146,6 @@
                 <div class="three columns offset-by-three">
                     <h4>{{ _('Information') }}</h4>
                     <ul>
-                        <li><a href="/terms_of_service">{{_('Terms of Service') }}</a></li>
                         <li><a href="{{ url_for('contact') }}">{{ _('Contact') }}</a></li>
                         <li><a href="/about">{{ _('About Us') }}</a></li>
                         <li><a href="/how_it_works">{{ _('How it works') }}</a></li>
@@ -171,7 +170,10 @@
             <hr>
             <div class="row">
                 <div class="twelve columns u-text-center">
-                    <small>&copy; 2016 {{ site_name }} authors</small>
+                    <small>&copy; 2016 {{ site_name }} authors</small> |
+                    <a href="/terms_of_service"><small>
+                        {{ _('Terms of Service') }}
+                    </small></a>
                 </div>
             </div>
         </div>
