Reinstate terms of service link

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -149,6 +149,7 @@
                         <li><a href="{{ url_for('contact') }}">{{ _('Contact') }}</a></li>
                         <li><a href="/about">{{ _('About Us') }}</a></li>
                         <li><a href="/how_it_works">{{ _('How it works') }}</a></li>
+                        <li><a href="/terms_of_service">{{ _('Terms of service') }}</a></li>
                     </ul>
                 </div>
                 {% if debug %}
