--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -54,7 +54,7 @@
                     </a>
                     
                     <!-- Language picker -->
-                    <!--<div id="lang-dropdown" class="dropdown u-pull-right">
+                    <div id="lang-dropdown" class="dropdown u-pull-right">
                         <button class="button dropdown-button u-add-margin-left">
                             <span class="button-text-with-img">En&nbsp;</span>
                             <img src="{{ url_for('static', filename='open-iconic/png/globe-2x.png') }}">&nbsp;
@@ -64,7 +64,7 @@
                             <a href="#">English</a>
                             <a href="#">Espa&ntilde;ol</a>
                         </div>
-                    </div>-->
+                    </div>
                     
                     <!-- Admin tools -->
                     {% if current_user.is_admin %}
