--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,7 @@
 
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-2.1.4.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/dropdown.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/translate.js') }}"></script>
     {{ moment.include_moment(local_js=url_for('static', filename='moment/min/moment.min.js')) }}
     <script type="text/javascript" src="{{ url_for('static', filename='moment-timezone/builds/moment-timezone-with-data-2010-2020.min.js') }}"></script>
     {% block scripts %}{% endblock %}
@@ -61,8 +62,12 @@
                             <img src="{{ url_for('static', filename='open-iconic/png/caret-bottom-2x.png') }}">
                         </button>
                         <div class="dropdown-content">
-                            <a href="#">English</a>
-                            <a href="#">Espa&ntilde;ol</a>
+                            {% if session['lang_code'] != 'en' %}
+                                <a href="javascript:translate('en')">English</a>
+                            {% endif %}
+                            {% if session['lang_code'] != 'es' %}
+                                <a href="javascript:translate('es');">Espa&ntilde;ol</a>
+                            {% endif %}
                         </div>
                     </div>
                     
