--- a/app/templates/causes/cause_form.html
+++ b/app/templates/causes/cause_form.html
@@ -9,8 +9,8 @@
         <div class="row">
             <fieldset>
                 <div class="six columns offset-by-three">
-                    {{ render_field(form.title, class="u-full-width") }}
-                    {{ render_field(form.intro, class="u-full-width")  }}
+                    {{ render_field(form_trans.title, class="u-full-width") }}
+                    {{ render_field(form_trans.intro, class="u-full-width")  }}
                 </div>
             </fieldset>
             <fieldset>
@@ -22,8 +22,8 @@
             </fieldset>
             <fieldset>
                 <div class="six columns offset-by-three">
-                    {{ render_field(form.story_heading, class="u-full-width") }}
-                    {{ render_field(form.story_content, class="u-full-width")  }}
+                    {{ render_field(form_trans.story_heading, class="u-full-width") }}
+                    {{ render_field(form_trans.story_content, class="u-full-width")  }}
                 </div>
             </fieldset>
         </div>
