--- a/app/templates/helpers/posts.html
+++ b/app/templates/helpers/posts.html
@@ -9,6 +9,11 @@ section (app/templates/styleguide/templating#discussion-helpers)
 <div class="post four columns">
     <h4>
         <a href="{{ url_for('posts.post_detail', slug=cause.slug, pk=post.id) }}">
+            {% if post.author in cause.creators.all() or post.author.is_admin %}
+            <img class="icon" 
+                src="{{ url_for('static', filename='open-iconic/png/star-3x.png') }}"
+                title="Announcement"> 
+            {% endif %}
             {{ post.title }}
         </a>
         {% if post.author == current_user %}
