--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -56,7 +56,7 @@ $(document).ready(function() {
         <div class="row">
             <div class="three columns offset-by-three">
                 <fieldset>
-                    <input id="login" type="submit" value="{{ _('Log In') }}"
+                    <input id="login" type="submit" value="{{ _('Log in') }}"
                         class="button button-primary u-mobile-fixed-bottom" >
                 </fieldset>
             </div>
@@ -78,17 +78,17 @@ $(document).ready(function() {
     <div class="row">
         <div class="one-third column">
             <a href="{{ url_for('twitter.login') }}" class="button u-full-width">
-                {{ _('Log In with Twitter') }}
+                {{ _('Log in with Twitter') }}
             </a>
         </div>
         <div class="one-third column">
             <a href="{{ url_for('google.login') }}" class="button u-full-width">
-                {{ _('Log In with Google') }}
+                {{ _('Log in with Google') }}
             </a>
         </div>
         <div class="one-third column">
             <a href="{{ url_for('facebook.login') }}" class="button u-full-width">
-                {{ _('Log In with Facebook') }}
+                {{ _('Log in with Facebook') }}
             </a>
         </div>
     </div>
