--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -899,47 +899,50 @@ input[type="submit"]:disabled:focus {
 
 /* Dropdown 
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+#lang-dropdown {
+    margin-right: 2em;
+    padding-top: 0.3em;
+}
 .dropdown {
     position: relative;
     display: inline-block;
 }
+.dropdown-button {
+    position: relative;
+    margin-top: 1em;
+}
+.dropdown-button .dropdown-lang-code {
+    position: absolute;
+    top: -3px;
+    left: -28px;
+    height: 31px;
+}
 .dropdown-content {
     display: none;
-    position: absolute;
-    background-color: #fff;
-    min-width: 99px;
-    margin-left: 11px;
-    margin-top: -10px;
-    border-left: 1px solid #1eaeda;
-    border-bottom: 1px solid #1eaeda;
-    border-right: 1px solid #1eaeda;
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
-    padding-bottom: 4px;
-}
-@media (min-width: 550px) {
-    .dropdown-content {
-        min-width: 124px;
-    }
-}
-.dropdown-content a {
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-.dropdown-content a:hover {
     background-color: #FBFAF9;
+    margin-top: 3em;
+    padding-top: 1em;
+    padding-right: 1em;
+    border-bottom: 1px solid #ff9900;
+    position: absolute;
+    min-width: 100%;
+    overflow: auto;
+    right: 0;
+}
+.dropdown-content ul {
+    list-style-type: none;
+    margin-bottom: 1em;
+}
+.dropdown-content .menu-separator {
+    border-bottom: 1px solid #e5e5e5;
+    margin: 0.5em 1em 0.5em 0;
 }
 .dropdown:hover .dropdown-content,
 .dropdown-content-click {
     display: block;
 }
-.dropdown:hover .dropdown-button,
-.dropdown-button-click {
-    background-color: #fff;
-    border-bottom: none;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
+.dropdown-content-click:hover .dropdown-content {
+    display: block;
 }
 
 
