--- a/app/templates/helpers/posts.html
+++ b/app/templates/helpers/posts.html
@@ -10,8 +10,8 @@ section (app/templates/styleguide/templating#discussion-helpers)
     <h4>
         <a href="{{ url_for('posts.post_detail', slug=cause.slug, pk=post.id) }}">
             {% if post.author in cause.creators.all() or post.author.is_admin %}
-            <img class="icon" 
-                src="{{ url_for('static', filename='open-iconic/png/star-3x.png') }}"
+            <img class="u-pull-right" 
+                src="{{ url_for('static', filename='open-iconic/png/star-2x.png') }}"
                 title="Announcement"> 
             {% endif %}
             {{ post.title }}
